--- a/src/components/common/Modal/index.module.css
+++ b/src/components/common/Modal/index.module.css
@@ -11,7 +11,7 @@
 
 .root {
   background-color: transparent;
-  padding: 20px;
+  padding: 12px;
   margin: 48px 0px;
   width: fit-content;
   height: fit-content;
